# RAM2017-CTR-kinematics

./: CMakeLists.txt  LICENSE  README.md  install.sh
ctr_resources/: ctr_sec2_tub3.xml  ctr_sec3_tub3.xml  ctr_sec3_tub4.xml  ctr_sec3_tub5.xml
ctr_source/: _forwards.h  ctr_robot.cpp  ctr_robot.h  ctr_static.h  ctr_test.cpp  matrix.h  robot_i.h  section_i.h  transrotscale.h
